--- a/javascript/src/css/style.css
+++ b/javascript/src/css/style.css
@@ -32,19 +32,19 @@ button:focus {
 }
 
 table tr:nth-child(even) td:nth-child(odd) {
-  background: #f2f2f2
+  background: #b5b5b5
 }
 
 table tr:nth-child(even) td:nth-child(even) {
-  background: #b5b5b5
+  background: #f2f2f2
 }
 
 table tr:nth-child(odd) td:nth-child(odd) {
-  background: #b5b5b5
+  background: #f2f2f2
 }
 
 table tr:nth-child(odd) td:nth-child(even) {
-  background: #f2f2f2
+  background: #b5b5b5
 }
 
 .board-cell {
@@ -53,12 +53,5 @@ table tr:nth-child(odd) td:nth-child(even) {
   width: 80px;
   height: 80px;
   border: 1px solid;
-}
-
-.cell-dark {
-  background: red;
-}
-
-.cell-light {
-  background: green;
+  cursor: pointer;
 }
