--- a/javascript/src/templates/game.html
+++ b/javascript/src/templates/game.html
@@ -3,7 +3,7 @@
     Waiting On Opponent...
   </div>
   <div class="flex-container flex-center flex-direction-column">
-    <span ng-class="{ 'white' : $ctrl.turn === 'Black', 'player-turn' : $ctrl.turn === 'White' }">{{ $ctrl.white }}</span>
+    <span ng-class="{ 'white' : $ctrl.turn === 'Black' || $ctrl.turn === '', 'player-turn' : $ctrl.turn === 'White' }">{{ $ctrl.white }}</span>
     <span ng-class="{ 'black' : $ctrl.turn === 'White', 'player-turn' : $ctrl.turn === 'Black' }">{{ $ctrl.black }}</span>
   </div>
   <div class="game-message flex-container flex-center">{{ $ctrl.gameMessage }}</div>
